client/src/styles/z-index.scss
.viewer-toolbar__children,
.html-overlay__item,
.html-overlay__screen-mask,
.osd__svg {
  z-index: 1;
}

.osd__mouse-tracker {
  z-index: 2;
}

.viewer-panel,
.viewer-toolbar,
.selected-room,
.selected-item, {
  z-index: 3
}

.html-overlay__screen-mask.-void {
  z-index: 0;
  background: red !important;
}

.unrest-floating-actions {
  z-index: 100;
}

